--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -6,18 +6,18 @@
 <meta name="keywords" content="土鸡、土鸡蛋、初生蛋、跑山鸡、跑地鸡">
 <meta name="description" content="土鸡、土鸡蛋、初生蛋、跑山鸡、跑地鸡">
 <link rel="shortcut icon" href="favicon.ico">
-<link type="text/css" rel="stylesheet" href="css/layout.css">
+<link type="text/css" rel="stylesheet" href="resources/home/layout.css">
 <link type="text/css" rel="stylesheet"
-	href="js/fancybox/jquery.fancybox.css">
-<script type="text/javascript" src="js/jquery.min.js"></script>
-<script type="text/javascript" src="js/fancybox/jquery.fancybox.js"></script>
-<script type="text/javascript" src="js/index.js"></script>
+	href="resources/component/fancybox/jquery.fancybox.css">
+<script type="text/javascript" src="resources/component/jquery-1.10.2/jquery.min.js"></script>
+<script type="text/javascript" src="resources/component/fancybox/jquery.fancybox.js"></script>
+<script type="text/javascript" src="resources/home/index.js"></script>
 <!--[if lte IE 6]>
-<script type="text/javascript" src="js/DD_belatedPNG_0.0.8a.js"></script>
+<script type="text/javascript" src="resources/home/DD_belatedPNG_0.0.8a.js"></script>
 <script type="text/javascript">DD_belatedPNG.fix('*');</script>
 <![endif]-->
-<link type="text/css" rel="stylesheet" href="css/index3.css">
-<link type="text/css" rel="stylesheet" href="css/activity.css">
+<link type="text/css" rel="stylesheet" href="resources/home/index.css">
+<link type="text/css" rel="stylesheet" href="resources/home/activity.css">
 <style type="text/css">
 .fancybox-margin {
 	margin-right: 17px;
@@ -33,7 +33,7 @@
 		<div class="box clear">
 			<!--logo-->
 			<div class="floatLeft logo">
-				<a href="/" hidefocus="true"><img src="image/icon/logo.jpg"
+				<a href="/" hidefocus="true"><img src="resources/image/icon/logo.jpg"
 					width="72" height="72" title="放心食材实福瑞丰园" alt="放心食材福瑞丰园"></a>
 			</div>
 			<!--end logo-->
@@ -130,7 +130,7 @@ $(function()
             return false;
         }
 
-        $('#header_top_cart_items').html('<div class="headerCartConE"><p><img src="image/icon/loading.gif" /></p></div>');
+        $('#header_top_cart_items').html('<div class="headerCartConE"><p><img src="resources/image/icon/loading.gif" /></p></div>');
         $('#header_top_cart .headerCartCount>span').html('0.00');
     	$('.headerCart').stop().slideDown(function()
     	{
@@ -438,7 +438,7 @@ $(function()
 					hidefocus="true">配送信息</a>
 			</div>
 			<div class="psfwPic">
-				<img src="image/icon/psfw2.png">
+				<img src="resources/image/icon/psfw2.png">
 			</div>
 		</div>
 	</div>
@@ -459,7 +459,7 @@ $(function()
 					<li class="floatLeft productListItem clear"><a
 						href="javascript:void(0);" target="_blank"
 						class="productListItemImg opacityA" title="蛋鸡" hidefocus="true">
-							<img src="image/fowl/danji.jpg" alt="蛋鸡">
+							<img src="resources/image/fowl/danji.jpg" alt="蛋鸡">
 					</a>
 						<h4>
 							<a href="javascript:void(0);" target="_blank" title="蛋鸡"
@@ -473,7 +473,7 @@ $(function()
 					<li class="floatLeft productListItem clear"><a
 						href="javascript:void(0);" target="_blank"
 						class="productListItemImg opacityA" title="家鹅" hidefocus="true">
-							<img src="image/fowl/er.jpg" alt="家鹅">
+							<img src="resources/image/fowl/er.jpg" alt="家鹅">
 					</a>
 						<h4>
 							<a href="javascript:void(0);" target="_blank" title="蛋鸡"
@@ -487,7 +487,7 @@ $(function()
 					<li class="floatLeft productListItem clear"><a
 						href="javascript:void(0);" target="_blank"
 						class="productListItemImg opacityA" title="火鸡" hidefocus="true">
-							<img src="image/fowl/huoji.jpg" alt="火鸡">
+							<img src="resources/image/fowl/huoji.jpg" alt="火鸡">
 					</a>
 						<h4>
 							<a href="javascript:void(0);" target="_blank" title="火鸡"
@@ -501,7 +501,7 @@ $(function()
 					<li class="floatLeft productListItem clear"><a
 						href="javascript:void(0);" target="_blank"
 						class="productListItemImg opacityA" title="猪" hidefocus="true">
-							<img src="image/fowl/pig.jpg" alt="猪">
+							<img src="resources/image/fowl/pig.jpg" alt="猪">
 					</a>
 						<h4>
 							<a href="javascript:void(0);" target="_blank" title="糯玉米"
@@ -515,7 +515,7 @@ $(function()
 					<li class="floatLeft productListItem clear"><a
 						href="javascript:void(0);" target="_blank"
 						class="productListItemImg opacityA" title="肉羊" hidefocus="true">
-							<img src="image/fowl/rouyang.jpg" alt="肉羊">
+							<img src="resources/image/fowl/rouyang.jpg" alt="肉羊">
 					</a>
 						<h4>
 							<a href="javascript:void(0);" target="_blank" title="肉羊"
@@ -529,7 +529,7 @@ $(function()
 					<li class="floatLeft productListItem clear"><a
 						href="javascript:void(0);" target="_blank"
 						class="productListItemImg opacityA" title="土鸡" hidefocus="true">
-							<img src="image/fowl/tuji.jpg" alt="土鸡">
+							<img src="resources/image/fowl/tuji.jpg" alt="土鸡">
 					</a>
 						<h4>
 							<a href="javascript:void(0);" target="_blank" title="土鸡"
@@ -543,7 +543,7 @@ $(function()
 					<li class="floatLeft productListItem clear"><a
 						href="javascript:void(0);" target="_blank"
 						class="productListItemImg opacityA" title="兔子" hidefocus="true">
-							<img src="image/fowl/tuzi.jpg" alt="兔子">
+							<img src="resources/image/fowl/tuzi.jpg" alt="兔子">
 					</a>
 						<h4>
 							<a href="javascript:void(0);" target="_blank" title="兔子"
@@ -557,7 +557,7 @@ $(function()
 					<li class="floatLeft productListItem clear"><a
 						href="javascript:void(0);l" target="_blank"
 						class="productListItemImg opacityA" title="鸭子" hidefocus="true">
-							<img src="image/fowl/yazi.jpg" alt="鸭子">
+							<img src="resources/image/fowl/yazi.jpg" alt="鸭子">
 					</a>
 						<h4>
 							<a href="javascript:void(0);" target="_blank" title="鸭子"
@@ -736,7 +736,7 @@ $(function()
 					<li class="floatLeft productListItem clear"><a
 						href="javascript:void(0);" target="_blank"
 						class="productListItemImg opacityA" title="红豆杉" hidefocus="true">
-							<img src="image/tree/1.jpg" alt="红豆杉">
+							<img src="resources/image/tree/1.jpg" alt="红豆杉">
 					</a>
 						<h4>
 							<a href="javascript:void(0);" target="_blank" title="红豆杉"
@@ -750,7 +750,7 @@ $(function()
 					<li class="floatLeft productListItem clear"><a
 						href="javascript:void(0);" target="_blank"
 						class="productListItemImg opacityA" title="红叶枫" hidefocus="true">
-							<img src="image/tree/2.jpg" alt="红叶枫">
+							<img src="resources/image/tree/2.jpg" alt="红叶枫">
 					</a>
 						<h4>
 							<a href="javascript:void(0);" target="_blank" title="红叶枫"
@@ -764,7 +764,7 @@ $(function()
 					<li class="floatLeft productListItem clear"><a
 						href="javascript:void(0);" target="_blank"
 						class="productListItemImg opacityA" title="红叶石楠" hidefocus="true">
-							<img src="image/tree/3.jpg" alt="红叶石楠">
+							<img src="resources/image/tree/3.jpg" alt="红叶石楠">
 					</a>
 						<h4>
 							<a href="javascript:void(0);" target="_blank" title="红叶石楠"
@@ -778,7 +778,7 @@ $(function()
 					<li class="floatLeft productListItem clear"><a
 						href="javascript:void(0);" target="_blank"
 						class="productListItemImg opacityA" title="罗汉松" hidefocus="true">
-							<img src="image/tree/4.jpg" alt="罗汉松">
+							<img src="resources/image/tree/4.jpg" alt="罗汉松">
 					</a>
 						<h4>
 							<a href="javascript:void(0);" target="_blank" title="罗汉松"
@@ -792,7 +792,7 @@ $(function()
 					<li class="floatLeft productListItem clear"><a
 						href="javascript:void(0);" target="_blank"
 						class="productListItemImg opacityA" title="广玉兰" hidefocus="true">
-							<img src="image/tree/5.jpg" alt="广玉兰">
+							<img src="resources/image/tree/5.jpg" alt="广玉兰">
 					</a>
 						<h4>
 							<a href="javascript:void(0);" target="_blank" title="广玉兰"
@@ -806,7 +806,7 @@ $(function()
 					<li class="floatLeft productListItem clear"><a
 						href="javascript:void(0);" target="_blank"
 						class="productListItemImg opacityA" title="银杏" hidefocus="true">
-							<img src="image/tree/6.jpg" alt="银杏">
+							<img src="resources/image/tree/6.jpg" alt="银杏">
 					</a>
 						<h4>
 							<a href="javascript:void(0);" target="_blank" title="银杏"
@@ -820,7 +820,7 @@ $(function()
 					<li class="floatLeft productListItem clear"><a
 						href="javascript:void(0);" target="_blank"
 						class="productListItemImg opacityA" title="樱花" hidefocus="true">
-							<img src="image/tree/7.jpg" alt="樱花">
+							<img src="resources/image/tree/7.jpg" alt="樱花">
 					</a>
 						<h4>
 							<a href="javascript:void(0);" target="_blank" title="樱花"
@@ -834,7 +834,7 @@ $(function()
 					<li class="floatLeft productListItem clear"><a
 						href="javascript:void(0);" target="_blank"
 						class="productListItemImg opacityA" title="樱花" hidefocus="true">
-							<img src="image/tree/8.jpg" alt="樱花">
+							<img src="resources/image/tree/8.jpg" alt="樱花">
 					</a>
 						<h4>
 							<a href="javascript:void(0);" target="_blank" title="樱花"
@@ -852,8 +852,8 @@ $(function()
 	<!-- 绿化苗木  -->
 
 
-	<link rel="stylesheet" type="text/css" href="css/customService.css" />
-	<script type="text/javascript" src="js/jquery.Sonline.js"></script>
+	<link rel="stylesheet" type="text/css" href="resources/home/customService.css" />
+	<script type="text/javascript" src="resources/component/sonline/jquery.Sonline.js"></script>
 	<script type="text/javascript">
 $(function()
 {
@@ -925,7 +925,7 @@ $(function()
 						</div>
 					</dt>
 					<dd>
-						<img src="image/icon/weixinerweima.jpg">
+						<img src="resources/image/icon/weixinerweima.jpg">
 					</dd>
 				</dl>
 			</div>
