--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -191,22 +191,24 @@ $(function()
 	</div>
 	<!--end banner-->
 
-	<!--最幸福的鸡-->
-	<div class="ygsl poster">
+
+	<!--新鲜鸡蛋-->
+	<div class="qy poster">
 		<div class="box clear">
 			<div class=" floatRight posterTxt marginRight10">
-				<h3>最幸福的鸡</h3>
+				<h3>最新鲜的鸡蛋</h3>
 				<h1>
-					<a href="javascript:void(0);" hidefocus="true">我只吃虫子和<br>蔬菜<br>我拒绝速成
+					<a href="javascript:void(0);" hidefocus="true">我蛋香四溢<br>口感细腻<br>我回味无穷
 					</a>
 				</h1>
-				<p>不用上班打卡，每天天亮伸个懒腰去地上吃肥肥虫，静静躺在地上沐浴着阳光，呼吸着山林的氧气，吃着没有农药残留的特供青菜，不愿当房奴喜欢住乡下，虽然长得很土，蛋“求”无愧于心。</p>
+				<p> 只有选择真正健康，生活才会健康，每一颗蛋黄色深，蛋清粘稠，无激素和抗生素，胆固醇低。科学搭配每一份绿色饲料，只为绿色食品。蛋“求”无愧于心！ </p>
 				<a href="javascript:void(0);" class="orangeLineBtn orangeLineBtn30"
-					hidefocus="true">农场详情</a>
+					hidefocus="true">商品详情</a>
 			</div>
 		</div>
 	</div>
-	<!--end 最幸福的鸡-->
+	<!--end 新鲜鸡蛋  -->
+
 
 	<!--纯天然的蔬菜-->
 	<div class="xjy poster">
@@ -214,33 +216,34 @@ $(function()
 			<div class=" floatLeft posterTxt marginLeft10">
 				<h3>纯天然的蔬菜</h3>
 				<h1>
-					<a href="javascript:void(0);" hidefocus="true">我源自天然纯净<br>的农场<br>我拒绝农药
+					<a href="javascript:void(0);" hidefocus="true">我源自纯天然<br>原汁原味<br>我拒绝农药
 					</a>
 				</h1>
-				<p>常年种植超过200个蔬菜品种。我们倡导自然健康的生活方式，在种植过程中施用有机肥，不用农药和激素，不种植反季节作物。</p>
+				<p>大自然赋予了我们的许多美食，并不需要我们们过多的修饰，就足以满足我们挑剔的味蕾。原汁原味，没有农药，更没有转基因。只要用心，你便会发现。</p>
 				<a href="javascript:void(0);" class="orangeLineBtn orangeLineBtn30"
-					hidefocus="true">农场详情</a>
+					hidefocus="true">商品详情</a>
 			</div>
 		</div>
 	</div>
 	<!--end 纯天然的蔬菜-->
-
-	<!--奇源农场-->
-	<div class="qy poster">
+	
+	<!--原生态的土鸡-->
+	<div class="ygsl poster">
 		<div class="box clear">
 			<div class=" floatRight posterTxt marginRight10">
-				<h3>奇源农场</h3>
+				<h3>原生态的土鸡</h3>
 				<h1>
-					<a href="javascript:void(0);" hidefocus="true">我爱吃粮食<br>爱运动<br>我是生态粮食猪
+					<a href="javascript:void(0);" hidefocus="true">我只吃虫子和<br>蔬菜<br>我拒绝速成
 					</a>
 				</h1>
-				<p>农场粮食猪以玉米、糠豆、青菜等天然健康饲料为食促进生长，以党参、当归、陈皮等中草药为料强健身体，不含有任何添加剂。</p>
+				<p>不用上班打卡，每天天亮伸个懒腰去地上吃肥肥虫，静静躺在地上沐浴着阳光，呼吸着山林的氧气，吃着没有农药残留的特供青菜，不愿当房奴喜欢住乡下，虽然长得很土，但是很朴实。</p>
 				<a href="javascript:void(0);" class="orangeLineBtn orangeLineBtn30"
-					hidefocus="true">农场详情</a>
+					hidefocus="true">商品详情</a>
 			</div>
 		</div>
 	</div>
-	<!--end 奇源农场-->
+	<!--end 原生态的土鸡-->
+
 	<!--最新活动-->
 	<div class="indexActivity _event_container_">
 		<div class="indexActivityT box">
